Verbindungsaufbau SequDia mit kurzer beschreibung in das Entwurfsheft hinzugefügt.

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -1012,7 +1012,18 @@ Die Klasse stellt die komplette Ansicht des Musicmodes dar. Beim Starten des Mus
 
 
 %später:
+%brauchen wir den unterpunkt "abläufe in der app" alle sqd die wir haben beziehen sich doch auch auf die App
 \subsubsection{Abläufe in der App}
+
+\paragraph{Bluetoothverbindung mit den Earables herstellen:}
+Das folgende Sequenzdiagramm verdeutlicht wie eine Bluetoothverbindung hergestellt werden kann. Es wir davon ausgegangen, dass die App bereits gestartet wurde und noch keine Bluetoothverbindung zu den Earables besteht. Außerdem zeigt die App geraden die Seite des Laufmodus an.\\
+
+
+
+
+
+\includegraphics[width=1.1\textwidth]{./Diagramme/Verbindungsaufbausequenzdiagramm.png}
+
 \paragraph{Export Trainingsdaten:}
 \includegraphics[width=1.1\textwidth]{./Diagramme/TrainingsDatenExport_Sequenz.png}
 
