Klassenbeschreibung für IEarablesConnection verbessert

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -123,7 +123,7 @@ hier kommt ein mal das Klassendiagramm rein mit Verweis auf den Anhang - valle
 \subsubsection{ Interface IEarablesConnetion}
 
 \paragraph{Klassenbeschreibung:}
-Diese Klasse ist das Herz der Bibliothek. Sie besitzt alle Schnittstellen, über die später kommuniziert werden kann. Um eine BLE Verbindung herzustellen benutzt sie das \glqq Bluetooth LE Plugin for Xamarin\grqq{}. Es handelt sich hierbei um ein Interface um Mocking zu ermöglichen. So ist man in der Lage eine MockKlasse zu erstellen, die die Klasse IEarablesConnection implementiert um so das implementieren und testen zu vereinfachen.
+Diese Klasse ist das Herz der Bibliothek. Sie ist die Schnittstellen, über die später kommuniziert werden kann. Hierbei handelt es sich um ein Interface um Mocking zu ermöglichen und so das Implementieren und Testen zu vereinfachen. Um eine BLE Verbindung herzustellen benutzt sie das \glqq Bluetooth LE Plugin for Xamarin\grqq{}.
 
 \paragraph{Attribute:}
 \begin{itemize}
